apps/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-demo
  namespace: platform-demo
  labels:
    app.kubernetes.io/name: platform-demo
    app.kubernetes.io/part-of: platform-engineering-lab
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: platform-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: platform-demo
        app.kubernetes.io/part-of: platform-engineering-lab
    spec:
      terminationGracePeriodSeconds: 30
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: platform-demo
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: platform-demo
          image: ghcr.io/fadyy2k/platform-demo@sha256:6cbe1af141d721d020ceda70c7df7cd92cad54ecac2682855ebb4ba709b1b005
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
