apps/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-demo
  namespace: platform-demo
  labels:
    app.kubernetes.io/name: platform-demo
    app.kubernetes.io/part-of: platform-engineering-lab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: platform-demo
  ports:
    - name: http
      port: 80
      targetPort: http
